objects/Opportunity_Use_Case__c.object
<CustomObject>
    <description>What it Does? Supports tracking of Use Cases allocated to an opportunity record
Downstream Impact? Used initially by the PS organisation to track use cases for PS engagements separately from sold items (opportunity products)
Owner? Professional Services/IT (initial scope)</description>
    <fields>
        <fullName>Notes__c</fullName>
        <description>What it does? Used to store short notes related to the Use Case association that may be entered by the user or from an external integration
Owner? Professional Services / IT (initial scope)</description>
        <label>Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>What it does? A lookup (master-detail) to the parent associated opportunity. Every Opportunity Use Case should be associated to an Opportunity record
Owner? Professional Services/IT (initial scope)</description>
        <inlineHelpText>The relationship to the parent Opportunity record to which the use case is associated</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Use Cases</relationshipLabel>
        <relationshipName>Opportunity_Use_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>What it does? Indicates the quantity of the use case item that has been associated to the opportunity record
Owner? Professional Services / IT (initial scope)</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>What it does? Indicates the total price for the Use Case item associated to the Opportunity
Owner? Professional Services / IT (initial scope)</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>What it does? Indicates the unit price of the Use Case associated to the opportunity
Owner? Professional Services / IT (initial scope)</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Case_Active__c</fullName>
        <description>What it does? Indicates whether the selected Use Case is active for the opportunity use cases related list and in reporting</description>
        <formula>Use_Case__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Case Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Name__c</fullName>
        <description>What it does? Shows the associated Use Case Name for use in related lists and reporting</description>
        <formula>Use_Case__r.Name__c</formula>
        <label>Use Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case_Short_Code__c</fullName>
        <description>What it does? Shows the Use Case Short Code on the record from the lookup for use in the related list and reporting</description>
        <formula>Use_Case__r.ShortCode__c</formula>
        <label>Use Case Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? Links to a centralised Use Case definition record
Owner? Professional Services / IT (initial scope)</description>
        <label>Use Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DSR_UseCase_BluePrint_Definition__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>DSR_UseCase_BluePrint_Definition__c.Type__c</field>
                <operation>equals</operation>
                <value>Use Case</value>
            </filterItems>
            <infoMessage>Select the appropriate Use Case to associate to this Opportunity</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>DSR_UseCase_BluePrint_Definition__c</referenceTo>
        <relationshipLabel>Opportunity Use Cases</relationshipLabel>
        <relationshipName>Opportunity_Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Use Case</label>
    <nameField>
        <displayFormat>OUC-{0}</displayFormat>
        <label>Opportunity Use Cases Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Use Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>